added to home and project pages
created directories for projects

--- a/app/subtitle.mdx
+++ b/app/subtitle.mdx
@@ -1,2 +1,3 @@
-
-Computer Science Student, Chapman University
+Computer Science Student, Chapman University\
+[*LinkedIn*](https://www.linkedin.com/in/maxwell-richter-0b8a671b9/) ![](/images/image.png)
+[*GitHub*](https://github.com/MaxRR921)
