added youtube embed, changed formatting to align right at lg instead of
medium

--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -1,5 +1,5 @@
 \
-**Roped Together**\
+[**Roped Together**](/projects/RopedTogether)\
 3D mountain climbing game. Winner at Oregon Game Project Challenge 2022\
 \
 **Rope Simulation**\
