--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -6,7 +6,7 @@
 Constraint based rope simulation created for Roped together using C# and the unity engine line renderer\
 \
 **LayerJot Hand Washing**\
-Continued work with company [***LayerJot***](https://www.layerjot.com/)\
+Continued work with company [***LayerJot***](https://www.layerjot.com/) on an AI hand washing coaching system\
 \
 **Dance Performance 3D procedural system**\
 Created procedural camera movement, lighting and animation system in unity 3D for professional dance performance.
