Added RopeSim page

--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -2,7 +2,7 @@
 [**Roped Together**](/projects/RopedTogether)\
 3D mountain climbing game. Winner at Oregon Game Project Challenge 2022\
 \
-**Rope Simulation**\
+[**Rope Simulation NEEDS**](/projects/RopeSim)\
 Constraint based rope simulation created for Roped together using C# and the unity engine line renderer\
 \
 **LayerJot Hand Washing**\
