--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -5,7 +5,7 @@
 [**Rope Simulation NEEDS**](/projects/RopeSim)\
 Constraint based rope simulation created for Roped together using C# and the unity engine line renderer\
 \
-**LayerJot Hand Washing**\
+[**LayerJot AI Hand Washing Tool**](/projects/LayerJot)\
 Continued work with company [***LayerJot***](https://www.layerjot.com/) on an AI hand washing coaching system\
 \
 **Dance Performance 3D procedural system**\
