--- a/app/projects/RopeSim/Body.mdx
+++ b/app/projects/RopeSim/Body.mdx
@@ -10,4 +10,5 @@ I added additional functionalities to the simulation to turn it into a game mech
 are in a list, and can be pinned to any other Unity Engine game object. From there, I added functions to wind up the rope at 
 the waist of the character by pinning every few points to objects attached them. While climbing, the character lets out portions of the 
 rope and pins points to clip game objects as the character climbs, and when the character falls, they are pinned to a point on the 
-rope, causing it to catch them. 
+rope, causing it to catch them.
+<img src="/images/ropedNew.gif" alt="error" width="400" height="400"></img>
