--- a/app/projects/LayerJot/Body.mdx
+++ b/app/projects/LayerJot/Body.mdx
@@ -2,6 +2,5 @@
 I'm currently working with a team of 4 other students at Chapman University
 and a company called LayerJot, which makes AI-powered apps built for sterile processing technicians and hospitals. 
 We are working to create a tool for hospitals to provide
-suggestions to improve hand-washing practices in real time. We are still in the research stage. Below is our project proposal\
-
-
+suggestions to improve hand-washing practices in real time. We are still in the research stage. 
+<object data="/images/Essay Final 2.pdf" type="application/pdf" width="100%" height="800px"></object>
