Changed stuff to html that was mdx for button capability

--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -8,6 +8,6 @@ Constraint based rope simulation created for Roped together using C# and the uni
 [**LayerJot AI Hand Washing Tool**](/projects/LayerJot)\
 Continued work with company [***LayerJot***](https://www.layerjot.com/) on an AI hand washing coaching system\
 \
-**Dance Performance 3D procedural system**\
+[**Dance Performance 3D procedural system**](/projects/Dance)\
 Created procedural camera movement, lighting and animation system in unity 3D for professional dance performance.
 
