--- a/app/projects/LayerJot/Body.mdx
+++ b/app/projects/LayerJot/Body.mdx
@@ -3,4 +3,4 @@ I'm currently working with a team of 4 other students at Chapman University
 and a company called LayerJot, which makes AI-powered apps built for sterile processing technicians and hospitals. 
 We are working to create a tool for hospitals to provide
 suggestions to improve hand-washing practices in real time. We are still in the research stage. 
-<object data="/images/Essay Final 2.pdf" type="application/pdf" width="100%" height="800px"></object>
+<object data="/images/EssayFinal 2.pdf" type="application/pdf" width="100%" height="800px">  <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="/images/Essay Final 2.pdf"> **click here to download the PDF file**.</a></p> </object>
