--- a/app/projects/stressSensor/Body.mdx
+++ b/app/projects/stressSensor/Body.mdx
@@ -1,3 +1,3 @@
-Continued employment through Chapman University on work on a fiber optic stress sensor designed to precisely \\
-Paper:\\
+Continued employment through Chapman University on work on a fiber optic stress sensor designed to precisely  
+Paper:  
 <object data="/images/Fowler_App.pdf" type="application/pdf" width="100%" height="800px">  <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="/images/Fowler_App.pdf"> **click here to download the PDF file**.</a></p> </object>
