--- a/app/projects/stressSensor/Body.mdx
+++ b/app/projects/stressSensor/Body.mdx
@@ -1,3 +1,7 @@
-Continued employment through Chapman University on work on a fiber optic stress sensor designed to precisely  
+Conducting research on the development of a more compact fiber optic stress sensor for high-precision, non-destructive analysis of
+biological materials. Working under the guidance of Dr. Mark Harrison, this project aims to redesign the sensor using a photonic 
+integrated circuit (PIC) and to develop custom software that enables real-time data collection and synchronization of 
+devices. Our goal is to create an easy-to-use diagnostic tool capable of analyzing stress-strain curves, with potential 
+applications in disease diagnostics and material replication.
 Paper:  
 <object data="/images/Fowler_App.pdf" type="application/pdf" width="100%" height="800px">  <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="/images/Fowler_App.pdf"> **click here to download the PDF file**.</a></p> </object>
