--- a/app/projects/stressSensor/Body.mdx
+++ b/app/projects/stressSensor/Body.mdx
@@ -4,6 +4,8 @@ integrated circuit (PIC) and to develop custom software that enables real-time d
 devices. Our goal is to create an easy-to-use diagnostic tool capable of analyzing stress-strain curves, with potential 
 applications in disease diagnostics and material replication.\
 \
-Paper:  
+\
+*Paper:*  
+\
 \ 
 <object data="/images/Fowler_App.pdf" type="application/pdf" width="100%" height="800px">  <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="/images/Fowler_App.pdf"> **click here to download the PDF file**.</a></p> </object>
