added Harmonic Series Teacher Website Project

--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -2,7 +2,7 @@
 [**Roped Together**](/projects/RopedTogether)\
 3D mountain climbing game. Winner at Oregon Game Project Challenge 2022\
 \
-[**Rope Simulation NEEDS**](/projects/RopeSim)\
+[**Rope Simulation**](/projects/RopeSim)\
 Constraint based rope simulation created for Roped together using C# and the unity engine line renderer\
 \
 [**LayerJot AI Hand Washing Tool**](/projects/LayerJot)\
@@ -10,4 +10,6 @@ Continued work with company [***LayerJot***](https://www.layerjot.com/) on an AI
 \
 [**Dance Performance 3D procedural system**](/projects/Dance)\
 Created procedural camera movement, lighting and animation system in unity 3D for professional dance performance.
-
+\
+[**Harmonic Series Teacher Website **]
+Working with professor at Chapman University to create a music education website about the harmonic series.
