--- a/app/projects/Body.mdx
+++ b/app/projects/Body.mdx
@@ -11,5 +11,5 @@ Continued work with company [***LayerJot***](https://www.layerjot.com/) on an AI
 [**Dance Performance 3D procedural system**](/projects/Dance)\
 Created procedural camera movement, lighting and animation system in unity 3D for professional dance performance.
 \
-**Harmonic Series Teacher Website**
+[**Harmonic Series Teacher Website**]
 Working with professor at Chapman University to create a music education website about the harmonic series.
