--- a/app/homeBody.mdx
+++ b/app/homeBody.mdx
@@ -1,11 +1,3 @@
+# About Me
 \
-Hi! My name is Max Richter, and I'm a sophomore computer science major at Chapman University in Orange, CA. I'm studying computer science, but I also have interests in Physics and Math.\
--\
-**Technical Skills**\
-I have four years of experience with C# in the Unity Game Engine, three years in C++, one year developing software in python. Knowledge of math through multivariable calculus as well as linear algebra and discrete 
-mathematics. Experienced in developing software using GitHub for version control, Experienced with software development lifecycle and tracking progress with Jira. Knowledge of software design principles. Developing knowledge in html/css, NextJs, Taiwind Css\
--\
-**Education**\
-*August 2022 - May 2026* - Chapman University, B.S. Computer Science
-
-
+Hi! My name is Max Richter, and I'm a sophomore computer science major at Chapman University in Orange, CA. I'm studying computer science, but I also have interests in Physics and Math.
