--- a/app/homeBody.mdx
+++ b/app/homeBody.mdx
@@ -1,3 +1,3 @@
 # About Me
 \
-Hi! My name is Max Richter, and I'm a sophomore computer science major at Chapman University in Orange, CA. I'm studying computer science, but I also have interests in Physics and Math.
+**Bio:** name is Max Richter, and I'm a sophomore computer science major at Chapman University in Orange, CA. I'm studying computer science, but I also have interests in Physics and Math.
